[gd_scene load_steps=95 format=3 uid="uid://c7s3iqau34xjo"]

[ext_resource type="Script" uid="uid://djmsp2llyyvxy" path="res://Scripts/enemy.gd" id="1_1dp5w"]
[ext_resource type="Texture2D" uid="uid://dy6aru8tmwy21" path="res://Assets/AlienAwake.png" id="1_287tu"]
[ext_resource type="Texture2D" uid="uid://cdujxj6s6j57p" path="res://Assets/AlienAttack.png" id="1_ghaa6"]
[ext_resource type="Texture2D" uid="uid://cpboc75wc6yya" path="res://Assets/AlienRun.png" id="3_1dp5w"]
[ext_resource type="Texture2D" uid="uid://bmbyfduddng1d" path="res://Assets/Alien.png" id="3_ghaa6"]
[ext_resource type="Texture2D" uid="uid://dh3wereygbaoi" path="res://Assets/AlienSideAttack.png" id="3_ta2yt"]
[ext_resource type="Texture2D" uid="uid://vjw86y8fql5o" path="res://Assets/AlienRun2.png" id="4_1dp5w"]
[ext_resource type="Texture2D" uid="uid://blfpgyfwf7hk5" path="res://Assets/AlienIdle.png" id="4_8uf12"]
[ext_resource type="Texture2D" uid="uid://8afalesi0rti" path="res://Assets/AlienHit.png" id="4_56vhr"]
[ext_resource type="Texture2D" uid="uid://bso77ufthhfef" path="res://Assets/AlienSideRun.png" id="4_auwsv"]
[ext_resource type="Texture2D" uid="uid://dsvmwd34g21mh" path="res://Assets/AlienSideIdle.png" id="5_po0sg"]
[ext_resource type="Texture2D" uid="uid://dv48xnrhrj7v6" path="res://Assets/AlienDeath.png" id="5_tk7xo"]
[ext_resource type="Texture2D" uid="uid://cl81v7j8te4t" path="res://Assets/AlienBackHit.png" id="6_hgeoe"]
[ext_resource type="Texture2D" uid="uid://bmgnvp4q1i1qt" path="res://Assets/AlienBackRun.png" id="7_haro7"]
[ext_resource type="Texture2D" uid="uid://d4ngl2ytg8sg4" path="res://Assets/AlienSideHitL.png" id="7_tk7xo"]
[ext_resource type="Texture2D" uid="uid://bslb302y4cuo8" path="res://Assets/AlienSideRunLeft.png" id="8_56vhr"]
[ext_resource type="Texture2D" uid="uid://lluv1gisybrt" path="res://Assets/AlienSideHitR.png" id="8_scl1n"]
[ext_resource type="AudioStream" uid="uid://cp6csvq853evw" path="res://Assets/Audio/Alien (running).wav" id="18_scl1n"]
[ext_resource type="AudioStream" uid="uid://b7vuseus8d43h" path="res://Assets/Audio/Alien_hit.wav" id="19_dhkrs"]
[ext_resource type="AudioStream" uid="uid://dst8b6la8y4xp" path="res://Assets/Audio/Alien (death).wav" id="20_5xdhn"]
[ext_resource type="AudioStream" uid="uid://b8htmt8nib5bg" path="res://Assets/Audio/Alien_Attack.wav" id="21_4jyny"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_auwsv"]
radius = 4.0
height = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_m4x7e"]
atlas = ExtResource("1_ghaa6")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt4ob"]
atlas = ExtResource("1_ghaa6")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgeoe"]
atlas = ExtResource("1_ghaa6")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0whn2"]
atlas = ExtResource("1_ghaa6")
region = Rect2(36, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx1xr"]
atlas = ExtResource("1_ghaa6")
region = Rect2(48, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_n85mp"]
atlas = ExtResource("1_ghaa6")
region = Rect2(60, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhcg5"]
atlas = ExtResource("3_ta2yt")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_twqvw"]
atlas = ExtResource("3_ta2yt")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_1twfy"]
atlas = ExtResource("3_ta2yt")
region = Rect2(28, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhwq3"]
atlas = ExtResource("3_ta2yt")
region = Rect2(42, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv6oi"]
atlas = ExtResource("3_ta2yt")
region = Rect2(56, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf4eh"]
atlas = ExtResource("3_ta2yt")
region = Rect2(70, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("1_287tu")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("1_287tu")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("1_287tu")
region = Rect2(28, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vhr"]
atlas = ExtResource("1_287tu")
region = Rect2(42, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("1_287tu")
region = Rect2(56, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcolj"]
atlas = ExtResource("5_tk7xo")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8wrx"]
atlas = ExtResource("5_tk7xo")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqrwb"]
atlas = ExtResource("5_tk7xo")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghhmq"]
atlas = ExtResource("5_tk7xo")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rlt"]
atlas = ExtResource("5_tk7xo")
region = Rect2(88, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmsty"]
atlas = ExtResource("5_tk7xo")
region = Rect2(110, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_h52an"]
atlas = ExtResource("5_tk7xo")
region = Rect2(132, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h514"]
atlas = ExtResource("5_tk7xo")
region = Rect2(154, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxtdn"]
atlas = ExtResource("5_tk7xo")
region = Rect2(176, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb1ko"]
atlas = ExtResource("5_tk7xo")
region = Rect2(198, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dyvk"]
atlas = ExtResource("4_56vhr")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_anrbk"]
atlas = ExtResource("4_56vhr")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvksc"]
atlas = ExtResource("6_hgeoe")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0vx4"]
atlas = ExtResource("6_hgeoe")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wad7k"]
atlas = ExtResource("7_tk7xo")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ytd7"]
atlas = ExtResource("7_tk7xo")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pfub"]
atlas = ExtResource("8_scl1n")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_oque4"]
atlas = ExtResource("8_scl1n")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ej4m"]
atlas = ExtResource("4_8uf12")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwheg"]
atlas = ExtResource("4_8uf12")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_iol0x"]
atlas = ExtResource("4_8uf12")
region = Rect2(28, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofqcr"]
atlas = ExtResource("5_po0sg")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_nus6a"]
atlas = ExtResource("5_po0sg")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_imgxb"]
atlas = ExtResource("5_po0sg")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxecp"]
atlas = ExtResource("3_1dp5w")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jaer"]
atlas = ExtResource("3_1dp5w")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve8xs"]
atlas = ExtResource("3_1dp5w")
region = Rect2(36, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0iv8"]
atlas = ExtResource("3_1dp5w")
region = Rect2(48, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyrvc"]
atlas = ExtResource("7_haro7")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pja2t"]
atlas = ExtResource("7_haro7")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx5vc"]
atlas = ExtResource("7_haro7")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vco5"]
atlas = ExtResource("7_haro7")
region = Rect2(36, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xmqa"]
atlas = ExtResource("8_56vhr")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w0mm"]
atlas = ExtResource("8_56vhr")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebugx"]
atlas = ExtResource("8_56vhr")
region = Rect2(28, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpt27"]
atlas = ExtResource("8_56vhr")
region = Rect2(42, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1gwg"]
atlas = ExtResource("4_auwsv")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mxp7"]
atlas = ExtResource("4_auwsv")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a56t"]
atlas = ExtResource("4_auwsv")
region = Rect2(28, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6sir"]
atlas = ExtResource("4_auwsv")
region = Rect2(42, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqxsh"]
atlas = ExtResource("1_287tu")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7xo"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl1n"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 18, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkrs"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 36, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xdhn"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 54, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jyny"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 72, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh8xy"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 90, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjcj6"]
atlas = ExtResource("3_ghaa6")
region = Rect2(0, 108, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ycey"]
atlas = ExtResource("4_1dp5w")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cim4"]
atlas = ExtResource("4_1dp5w")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x82w"]
atlas = ExtResource("4_1dp5w")
region = Rect2(0, 18, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_iatxd"]
atlas = ExtResource("4_1dp5w")
region = Rect2(14, 18, 14, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_0whn2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4x7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt4ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgeoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0whn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx1xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n85mp")
}],
"loop": false,
"name": &"Attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhcg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twqvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1twfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhwq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv6oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf4eh")
}],
"loop": false,
"name": &"AttackRight",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}],
"loop": false,
"name": &"Awake",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcolj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8wrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghhmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmsty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h52an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h514")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxtdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb1ko")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dyvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anrbk")
}],
"loop": true,
"name": &"Hit",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvksc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0vx4")
}],
"loop": true,
"name": &"HitBack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wad7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ytd7")
}],
"loop": true,
"name": &"HitLeft",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pfub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oque4")
}],
"loop": true,
"name": &"HitRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ej4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwheg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iol0x")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofqcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nus6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imgxb")
}],
"loop": true,
"name": &"Idle_side",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxecp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jaer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve8xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0iv8")
}],
"loop": true,
"name": &"Run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyrvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pja2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx5vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vco5")
}],
"loop": true,
"name": &"RunBack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xmqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w0mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebugx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpt27")
}],
"loop": true,
"name": &"Run_SideL",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1gwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mxp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a56t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6sir")
}],
"loop": true,
"name": &"Run_SideR",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqxsh")
}],
"loop": true,
"name": &"Sleeping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xdhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jyny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh8xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjcj6")
}],
"loop": true,
"name": &"Wrong_Run",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ycey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x82w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iatxd")
}],
"loop": true,
"name": &"Wrong_Run2",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk7xo"]
bg_color = Color(1, 0.105882354, 0.3529412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 9

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5xdhn"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("19_dhkrs")

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_1dp5w")

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_auwsv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 15
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_0whn2")
animation = &"Sleeping"
autoplay = "Idle"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 25.0
target_desired_distance = 20.0
neighbor_distance = 350.0
debug_path_custom_color = Color(1, 0.20392157, 1, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="LineOfSight" type="RayCast2D" parent="."]
visibility_layer = 0
target_position = Vector2(120, 0)
collision_mask = 4

[node name="Attack" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_auwsv")
debug_color = Color(0.93235874, 0.22394478, 0.34970945, 0.41960785)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -2.0
offset_top = -13.0
offset_right = 18.0
offset_bottom = -9.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0.80795443, 0, 0.020879505, 1)
theme_override_colors/font_outline_color = Color(0.8666667, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_tk7xo")
max_value = 70.0
step = 1.0
value = 70.0
show_percentage = false

[node name="RunningAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_scl1n")
volume_db = -6.0
pitch_scale = 0.85
max_distance = 200.0
playback_type = 1

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_5xdhn")
volume_db = -1.0
pitch_scale = 0.88
playback_type = 1

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_5xdhn")
playback_type = 1

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_4jyny")
volume_db = -12.0
pitch_scale = 1.15
playback_type = 1

[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="EnemyHitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
